# ml-config-template

./: .flake8  Makefile  README.md  data-preprocessing.py  main.py  pyproject.toml
config/: config.yaml
config/dataset/: mnist.yaml
mnist-model/: dataset.py  runner.py  tensorboard.py  tracking.py
mnist_model/: dataset.py  runner.py  tensorboard.py  tracking.py
